--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,30 @@
 
-body {
+/* body {
     text-align: center; 
     height: 100%;
     font-family:Arial;
     background-color: rgb(195, 250, 243);
-}
+} */
 
 h1 {
+  text-align: center;
+  font-family: Arial; 
   color:#14396a;
 }
 
-.center {
+/* .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  }
+  } */
 
-  img.rounded-corners {
+  /* img.rounded-corners {
 
     border-radius: 30px;
   
-  }
-
+  } */
+/* 
   .myButton {
     box-shadow:inset 0px 1px 0px 0px #bee2f9;
     background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
@@ -47,29 +49,86 @@ h1 {
   .myButton:active {
     position:relative;
     top:1px;
+  } */
+  
+  
+  
+  .slideshowContainer {
+    position: relative;
+    overflow: hidden;
+    margin: 50px 0 75px;
+    width: 100%;
+    height: 500px;
   }
   
-  a {
-    text-decoration: none;
+  .imageSlides {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: -1;
+  }
+  
+  /* add 'visible' class via Javascript */
+  .visible {
+    opacity: 1;
+  }
+  
+  .slideshowArrow {
+    font-size: 7em;
+    color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+  }
+  
+  .slideshowArrow:hover {
+    opacity: 0.75;
+  }
+  
+  #leftArrow {
+    position: absolute;
+    left: 4%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  #rightArrow {
+    position: absolute;
+    right: 4%;
+    top: 50%;
+    transform: translate(50%, -50%);
+  }
+  
+  .slideshowCircles {
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .circle {
     display: inline-block;
-    padding: 8px 16px;
-  }
-  
-  a:hover {
-    background-color: #30b4d4;
-    color: #14396a;
-  }
-  
-  .previous {
-    background-color: #63b8ee;
-    color: #14396a;
-  }
-  
-  .next {
-    background-color: #63b8ee;
-    color: #14396a;
-  }
-  
-  .round {
+    margin-left: 3px;
+    margin-right: 3px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
+    border: solid 2px rgba(255, 255, 255, 0.5);
+    transition: 1s ease-in-out;
   }
+  
+  .dot {
+    background-color: rgba(255, 255, 255, 0.7);
+    border: solid 2px rgba(255, 255, 255, 0.5);
+  }
+  
+  /* .round {
+    border-radius: 50%;
+  } */
+
+  
