--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 
-/* body {
+body {
     text-align: center; 
     height: 100%;
     font-family:Arial;
     background-color: rgb(195, 250, 243);
-} */
+}
 
 h1 {
   text-align: center;
@@ -12,12 +12,12 @@ h1 {
   color:#14396a;
 }
 
-/* .center {
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-  } */
+  }
 
   /* img.rounded-corners {
 
