--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,19 @@ h1 {
   color:#14396a;
 }
 
+.name {
+  font-family: Arial;
+  font-weight: bold;  
+  color:#14396a;
+}
+
+.comment_box {
+  font-family: Arial; 
+  font-weight: bold; 
+  color: #14396a;
+  border-radius: 6px; 
+}
+
 .dropbtn {
   background-color: #63b8ee;
   color: #14396a;
@@ -94,7 +107,24 @@ h1 {
     top:1px;
   }
   
-  
+  .submit {
+    box-shadow:inset 0px 1px 0px 0px #bee2f9;
+    background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+    background-color:#63b8ee;
+    border-radius:6px;
+    border:1px solid #3866a3;
+    display:inline-block;
+    cursor:pointer;
+    color:#14396a;
+    font-family:Arial;
+    font-size:13px;
+    font-weight:bold;
+    padding:5px 18px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #7cacde;
+    margin-top: 25px;
+    margin-bottom: 25px; 
+  }
   
 
   
