--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ h1 {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #d3e2eb;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -57,7 +57,7 @@ h1 {
 }
 
 .dropdown-content a {
-  color: black;
+  color:#14396a;;
   padding: 12px 16px;
   text-decoration: none;
   display: block; 
