--- a/styles/style.css
+++ b/styles/style.css
@@ -25,51 +25,10 @@ h1 {
   border-radius: 6px; 
 }
 
-.dropbtn {
-  background-color: #63b8ee;
-  color: #14396a;
-  padding: 10px;
-  font-size: 14px;
-  font-weight: bold;
-  font-family: Arial; 
-  border: none;
-  margin-bottom: 25px; 
-  border-radius: 6px; 
-  border:1px solid #3866a3;
-  box-shadow:inset 0px 1px 0px 0px #bee2f9;
-  background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
-}
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #d3e2eb;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  font-weight: bold;
-  font-family: Arial; 
-}
 
-.dropdown-content a {
-  color:#14396a;;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block; 
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e95ca}
-
-.center {
+/* .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -78,13 +37,111 @@ h1 {
 
   .thumb {
     border-radius: 30px; 
+  } */
+
+  * {box-sizing: border-box}
+  body {font-family: Verdana, sans-serif; margin:0}
+  .mySlides {display: none}
+  img {vertical-align: middle;}
+  
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 500px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  .previous {
+    float: left; 
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 300px) {
+    .prev, .next,.text {font-size: 11px}
   }
 
- 
 
-
-
-  .myButton {
+  /* .myButton {
     box-shadow:inset 0px 1px 0px 0px #bee2f9;
     background:linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
     background-color:#63b8ee;
@@ -109,7 +166,7 @@ h1 {
   .myButton:active {
     position:relative;
     top:1px;
-  }
+  } */
   
   .submit {
     box-shadow:inset 0px 1px 0px 0px #bee2f9;
