--- a/styles/style.css
+++ b/styles/style.css
@@ -92,17 +92,9 @@ h1 {
     text-align: center;
   }
   
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
   
   /* The dots/bullets/indicators */
-  .dot {
+  /* .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -115,10 +107,10 @@ h1 {
   
   .active, .dot:hover {
     background-color: #717171;
-  }
+  } */
   
   /* Fading animation */
-  .fade {
+  /* .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
@@ -133,12 +125,12 @@ h1 {
   @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
-  }
+  } */
   
   /* On smaller screens, decrease text size */
-  @media only screen and (max-width: 300px) {
+  /* @media only screen and (max-width: 300px) {
     .prev, .next,.text {font-size: 11px}
-  }
+  } */
 
 
   /* .myButton {
