--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,67 @@ h1 {
   color:#14396a;
 }
 
+img.rounded-corners {
+  border-radius: 30px; 
+}
+/* 
+#slides {
+  position: relative;
+  height: 300px;
+  padding: 0px;
+  margin: 0px;
+  list-style-type: none;
+}
+
+.slide {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+.showing {
+  opacity: 1;
+  z-index: 2;
+} */
+
+/* .slide {
+  background: url(${this.image}) no-repeat center; 
+  animation:fade 8s infinite;
+  -webkit-animation:fade 8s infinite;
+} */
+
+/* @keyframes slide {
+  0% {
+  opacity:1;
+}
+45% {
+opacity:1;
+}
+55% {
+opacity:0;
+}
+100% {
+opacity:0;
+}
+}
+
+#slide {
+  animation-name: slide;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 10s;
+  animation-direction: alternate;
+  } */
+
 .name {
   font-family: Arial;
   font-weight: bold;  
@@ -28,13 +89,8 @@ h1 {
 
 
 
-/* .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }
 
+/*
   .thumb {
     border-radius: 30px; 
   } */
@@ -45,11 +101,11 @@ h1 {
   img {vertical-align: middle;}
   
   /* Slideshow container */
-  .slideshow-container {
+  /* .slideshow-container {
     max-width: 500px;
     position: relative;
     margin: auto;
-  }
+  } */
   
   /* Next & previous buttons */
   .prev, .next {
